8039904: dtrace/hotspot/Monitors/Monitors001 fails with "assert(s > 0) failed: Bad size calculated"

Dtrace monitoring uses size before mirror size is set.

Reviewed-by: kamg, hseigel